Fix for too big numbers

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@ a {
   overflow: hidden;
 }
 
-.stage svg {
+.graph {
   margin-top: -40%;
   margin-bottom: -70%;
 }
